[SP-6692] - Backport of PPP-5113 - Vulnerable Component: aircompressor (10.2 Suite)

--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -572,7 +572,7 @@
             <resolverFilter>
               <include>
                 <!--Needed for Pig-->
-                *:antlr-runtime,*:automaton,*:pig,*:parquet-pig,*:sqoop,*:joda-time,*:jython,*:netty-*,*:jackson-databind,*:jackson-core
+                *:antlr-runtime,*:automaton,*:pig,*:parquet-pig,*:sqoop,*:joda-time,*:jython,*:netty-*,*:jackson-databind,*:jackson-core,*:aircompressor
               </include>
               <transitive>false</transitive>
             </resolverFilter>
