--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -266,6 +266,18 @@
       <groupId>org.apache.orc</groupId>
       <artifactId>orc-core</artifactId>
       <version>${org.apache.orc.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>io.airlift</groupId>
+          <artifactId>aircompressor</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- used by org.apache.orc -->
+    <dependency>
+      <groupId>io.airlift</groupId>
+      <artifactId>aircompressor</artifactId>
+      <version>0.27</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -506,7 +518,7 @@
             </resolverFilter>
             <resolverFilter>
               <include>
-                *:libthrift,*:netty-*,
+                *:libthrift,*:netty-*,*:aircompressor,
                 software.amazon.awssdk:*, *:bcprov-jdk18on
               </include>
               <exclude>
