--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -335,6 +335,12 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-azure</artifactId>
       <version>3.3.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-mapper-asl</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -545,4 +551,3 @@
     </plugins>
   </build>
 </project>
-
