[SP-6803] - Backport of PPP=5584 Jackson vulnerable component

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -312,7 +312,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.parquet</groupId>
-      <artifactId>parquet-hadoop-bundle</artifactId>
+      <artifactId>parquet-hadoop</artifactId>
       <version>${parquet.version}</version>
     </dependency>
 
@@ -524,7 +524,7 @@
                 *:hadoop-azure,
                 *:hadoop-azure-datalake,
                 com.amazonaws:*,
-                *:parquet-hadoop-bundle,*:hadoop-hdfs,
+                *:parquet-hadoop,*:hadoop-hdfs,
                 *:avro-mapred,
                 org.eclipse.jetty:*,
                 com.google.guava:*,
