--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -115,6 +115,11 @@
       <artifactId>jetty-xml</artifactId>
       <version>${jetty.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty.websocket</groupId>
+      <artifactId>javax-websocket-server-impl</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.pentaho.hadoop.shims</groupId>
@@ -147,6 +152,10 @@
         <exclusion>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jetty.websocket</groupId>
+          <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -584,7 +593,7 @@
                 com.amazonaws:*,
                 *:parquet-hadoop,*:hadoop-hdfs,
                 *:avro-mapred,
-                org.eclipse.jetty:*,
+                org.eclipse.jetty:*,org.eclipse.jetty.websocket:*,
                 com.google.guava:*,
                 <!--Needed for Hive-->
                 *:commons-configuration,*:commons-configuration2,
